argocd/apps/archive-warrior/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warrior
  labels:
    app: warrior
spec:
  replicas: 6
  selector:
    matchLabels:
      app: warrior
  template:
    metadata:
      labels:
        app: warrior
    spec:
      containers:
      - image: atdr.meo.ws/archiveteam/warrior-dockerfile:latest@sha256:afe7e9a9a1cd11d044ec960f48a3f3d8e871d0bd058c204163757e6bc7b74ee6
        name: warrior
        ports:
            - containerPort: 8001
              protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: "384Mi"
          requests:
            cpu: "1m"
            memory: "256Mi"
      nodeSelector:
        kubernetes.io/arch: amd64
