argocd/apps/archive-warrior/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: warrior-vs
spec:
  hosts:
  - warrior.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: warrior
        port:
          number: 8001
